feat: update theme

--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
         </div>
     </footer>
 
+    <!-- Add particle elements for background visual interest -->
+    <div class="particle">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
     <script src="{{ "js/script.js" | relURL }}"></script>
 </body>
 </html>
